# PocketOptionBot

./: .env.config  .env.config.example  .env.example  .gitignore  AGENT_GOALS.md  CLAUDE.md  FEATURE_FLIP_WAIT_CONFIRM.md  FEATURE_RAW_TICK_STREAMER.md  MARIE_RESEARCH_INDEX.md  NEXT_SIGNALS_IMPLEMENTATION.md  NEXT_STEPS.txt  PLAN.md  PO_DATA_SURFACE.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  RESEARCH_ACTIONS_CHECKLIST.md  RESEARCH_SUMMARY_MARIE.md  SENTIMENT_UI_PROBE.md  SHADOW_TRADE_ANALYSIS.md  SIGNAL_ANALYSIS_REPORT.md  SIGNAL_VIABILITY_REPORT.md  STRATEGY_ANALYSIS.md  TIER_PROMOTION_RESEARCH.md  TIME_OF_DAY_FILTER_GUIDE.md  TRADING_EDGE_MAP.md  TRADING_FILTERS_IMPLEMENTATION.md  VALIDATION_RUN_CHECKLIST.md  demo_signal_test.py  demo_test.py  main.py  main_v2.py  nohup.out  pyproject.toml  requirements-dashboard.txt  requirements.txt  start_dashboard.sh  test_confluence_setting.py  verify_selectors.py
broker/: __init__.py  connector.py  executor.py  po_api.py  scraper.py  sentiment_collector.py  tick_stream.py
config/: settings.py
dashboard/: __init__.py  analysis.py  analytics.py  models.py  server.py  settings_io.py  state_bridge.py
data/: __init__.py  candles.py  decisions_store.py  feed.py  feed_stats.jsonl  flip_levers.json  flip_levers_5s.json  gbpusd_live_session.json  gbpusd_ticks_capture.json  gbpusd_ticks_clean.json  pair_hour_blocks.json  user_trades.jsonl
docs/: dashboard-plan.md  feature-martingale-stake-management.md  option-a-payout-first-frd.md  performance_from_logs_202606091500.md  performance_optimization.md  probability-calibration.md  (+6 more)
(+129 files in other folders)
