[tool.poetry]
name = "pocketoption-bot"
version = "0.1.0"
description = "PocketOption trading bot with CDP automation"
authors = ["Kym McInerney <kym@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = ">=1.40.0"
pandas = ">=2.1.0"
numpy = ">=1.24.0"
pandas-ta = ">=0.3.14b0"
pydantic-settings = ">=2.1.0"
python-dotenv = ">=1.0.0"
loguru = ">=0.7.0"
rich = ">=13.0.0"
aiofiles = ">=23.0.0"
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
